# LogPainter

./: .gitignore  README.md  example-config.yaml  logpainter.py  pyproject.toml
.github/workflows/: build.yaml
logpainter/: colors.py  logpainter.py
logpainter/tests/: test_colors.py  test_log_colorizer.py
