[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logpainter"
version = "0.0.8"
description = "A small CLI tool to colorize log files based on YAML rules"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyYAML"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.pytest.ini_options]
testpaths = ["logpainter/tests"]
[project.scripts]
logpainter = "logpainter.logpainter:main"